--- a/Books Recommender cv and resume.ipynb
+++ b/Books Recommender cv and resume.ipynb
@@ -2852,10 +2852,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "70f8a7a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'd:\\Books recom\\env\\python.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p d:\\Books recom\\env ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def recommends_book(books_name):\n",
     "    books_id=np.where(pivot_book.index==books_name)[0][0]\n",
@@ -2894,8 +2905,21 @@
    "execution_count": null,
    "id": "0f4f1b84",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'd:\\Books recom\\env\\python.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p d:\\Books recom\\env ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "conda install -p d:\\Books recom\\env ipykernel --update-deps --force-reinstall"
+   ]
   }
  ],
  "metadata": {
@@ -2914,7 +2938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
